various changes to adventure game - dialogue with npc

--- a/HTML/content/healing/healer_certification.html
+++ b/HTML/content/healing/healer_certification.html
@@ -68,36 +68,40 @@
             <h1>समग्र स्वास्थ्य प्रमाणीकरण कार्यक्रम</h1>
         </div>
 
-        <div class="grid-container">
-            <div class="english">
-                <h2>Program Overview</h2>
-                <p>Total Duration: 84 weeks</p>
-                <ul>
-                    <li>1. Program Introduction (2 weeks)</li>
-                    <li>2. Holistic Healing Foundations (12 weeks)</li>
-                    <li>3. Permaculture Studies (16 weeks)</li>
-                    <li>4. Medical Herbalism (16 weeks)</li>
-                    <li>5. Divine Feminine Studies (8 weeks)</li>
-                    <li>6. Integration and Professional Development (8 weeks)</li>
-                    <li>7. Psychological Trauma Healing (12 weeks)</li>
-                    <li>8. Advanced Meditation Practices (12 weeks)</li>
-                </ul>
-            </div>
-            <div class="nepali">
-                <h2>कार्यक्रम समीक्षा</h2>
-                <p>कुल अवधि: ८४ हप्ता</p>
-                <ul>
-                    <li>१. कार्यक्रम परिचय (२ हप्ता)</li>
-                    <li>२. समग्र स्वास्थ्य आधारहरू (१२ हप्ता)</li>
-                    <li>३. पर्माकल्चर अध्ययन (१६ हप्ता)</li>
-                    <li>४. औषधीय जडीबुटी विज्ञान (१६ हप्ता)</li>
-                    <li>५. दैवीय नारी अध्ययन (८ हप्ता)</li>
-                    <li>६. एकीकरण र व्यावसायिक विकास (८ हप्ता)</li>
-                    <li>७. मनोवैज्ञानिक आघात उपचार (१२ हप्ता)</li>
-                    <li>८. उन्नत ध्यान अभ्यास (१२ हप्ता)</li>
-                </ul>
-            </div>
+    <div class="grid-container">
+        <div class="english">
+            <h2>Program Overview</h2>
+            <p>Total Duration: 108 weeks</p>
+            <ul>
+                <li>1. Program Introduction (2 weeks)</li>
+                <li>2. Holistic Healing Foundations (12 weeks)</li>
+                <li>3. Permaculture Studies (16 weeks)</li>
+                <li>4. Medical Herbalism (16 weeks)</li>
+                <li>5. Divine Feminine Studies (8 weeks)</li>
+                <li>6. Integration and Professional Development (8 weeks)</li>
+                <li>7. Psychological Trauma Healing (12 weeks)</li>
+                <li>8. Advanced Meditation Practices (12 weeks)</li>
+                <li>9. Women's Health and Doula Services (12 weeks)</li>
+                <li>10. Domestic Violence and Abuse Counseling (12 weeks)</li>
+            </ul>
         </div>
+        <div class="nepali">
+            <h2>कार्यक्रम समीक्षा</h2>
+            <p>कुल अवधि: १०८ हप्ता</p>
+            <ul>
+                <li>१. कार्यक्रम परिचय (२ हप्ता)</li>
+                <li>२. समग्र स्वास्थ्य आधारहरू (१२ हप्ता)</li>
+                <li>३. पर्माकल्चर अध्ययन (१६ हप्ता)</li>
+                <li>४. औषधीय जडीबुटी विज्ञान (१६ हप्ता)</li>
+                <li>५. दैवीय नारी अध्ययन (८ हप्ता)</li>
+                <li>६. एकीकरण र व्यावसायिक विकास (८ हप्ता)</li>
+                <li>७. मनोवैज्ञानिक आघात उपचार (१२ हप्ता)</li>
+                <li>८. उन्नत ध्यान अभ्यास (१२ हप्ता)</li>
+                <li>९. महिला स्वास्थ्य र डुला सेवाहरू (१२ हप्ता)</li>
+                <li>१०. घरेलु हिंसा र दुर्व्यवहार परामर्श (१२ हप्ता)</li>
+            </ul>
+        </div>
+    </div>
 
         <!-- Section 1: Program Introduction -->
         <div class="grid-container">
@@ -498,40 +502,197 @@
                 </ul>
             </div>
         </div>
+<!-- Women's Health and Doula Services -->
+        <div class="grid-container">
+            <div class="english">
+                <h2>9. Women's Health and Doula Services (12 weeks)</h2>
+                <ul>
+                    <li>Traditional Birthing Practices
+                        <ul>
+                            <li>Nepali birth traditions and rituals</li>
+                            <li>Role of traditional birth attendants (sudeni)</li>
+                            <li>Integration of modern and traditional practices</li>
+                        </ul>
+                    </li>
+                    <li>Pregnancy and Childbirth Support
+                        <ul>
+                            <li>Prenatal care and nutrition</li>
+                            <li>Labor positions and breathing techniques</li>
+                            <li>Postpartum care practices (Sutika)</li>
+                            <li>Traditional postnatal herbs and nutrition</li>
+                        </ul>
+                    </li>
+                    <li>Clinical Skills
+                        <ul>
+                            <li>Vital signs monitoring</li>
+                            <li>Basic emergency response</li>
+                            <li>Birth complications recognition</li>
+                            <li>Hospital transfer protocols</li>
+                        </ul>
+                    </li>
+                    <li>Cultural and Spiritual Support
+                        <ul>
+                            <li>Birth space purification rituals</li>
+                            <li>Protective mantras and practices</li>
+                            <li>Family integration and support</li>
+                            <li>Sacred postpartum ceremonies</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="nepali">
+                <h2>९. महिला स्वास्थ्य र डुला सेवाहरू (१२ हप्ता)</h2>
+                <ul>
+                    <li>परम्परागत प्रसूति अभ्यासहरू
+                        <ul>
+                            <li>नेपाली जन्म परम्परा र संस्कारहरू</li>
+                            <li>परम्परागत सुडेनीको भूमिका</li>
+                            <li>आधुनिक र परम्परागत अभ्यासको एकीकरण</li>
+                        </ul>
+                    </li>
+                    <li>गर्भावस्था र प्रसव सहयोग
+                        <ul>
+                            <li>प्रसव पूर्व हेरचाह र पोषण</li>
+                            <li>प्रसव स्थिति र श्वास प्रविधिहरू</li>
+                            <li>सुत्केरी हेरचाह अभ्यासहरू</li>
+                            <li>परम्परागत सुत्केरी जडीबुटी र पोषण</li>
+                        </ul>
+                    </li>
+                    <li>क्लिनिकल सीपहरू
+                        <ul>
+                            <li>जीवन संकेत अनुगमन</li>
+                            <li>आधारभूत आपतकालीन प्रतिक्रिया</li>
+                            <li>जन्म जटिलता पहिचान</li>
+                            <li>अस्पताल स्थानान्तरण प्रोटोकल</li>
+                        </ul>
+                    </li>
+                    <li>सांस्कृतिक र आध्यात्मिक सहयोग
+                        <ul>
+                            <li>जन्म स्थान शुद्धिकरण संस्कार</li>
+                            <li>सुरक्षात्मक मन्त्र र अभ्यासहरू</li>
+                            <li>परिवार एकीकरण र सहयोग</li>
+                            <li>पवित्र सुत्केरी समारोहहरू</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-        <!-- Certification Requirements -->
+        <!-- Domestic Violence and Abuse Counseling -->
+        <div class="grid-container">
+            <div class="english">
+                <h2>10. Domestic Violence and Abuse Counseling (12 weeks)</h2>
+                <ul>
+                    <li>Safety Assessment and Planning
+                        <ul>
+                            <li>Risk evaluation protocols</li>
+                            <li>Emergency response procedures</li>
+                            <li>Safe house coordination</li>
+                            <li>Documentation for legal purposes</li>
+                        </ul>
+                    </li>
+                    <li>Trauma-Informed Care
+                        <ul>
+                            <li>Complex trauma treatment</li>
+                            <li>Cultural factors in abuse dynamics</li>
+                            <li>Gender-based violence patterns</li>
+                            <li>Intergenerational trauma healing</li>
+                        </ul>
+                    </li>
+                    <li>Community Resources
+                        <ul>
+                            <li>Local support networks</li>
+                            <li>Legal advocacy services</li>
+                            <li>Economic empowerment programs</li>
+                            <li>Children's support services</li>
+                        </ul>
+                    </li>
+                    <li>Healing Practices
+                        <ul>
+                            <li>Traditional healing rituals</li>
+                            <li>Group support facilitation</li>
+                            <li>Family system interventions</li>
+                            <li>Empowerment techniques</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="nepali">
+                <h2>१०. घरेलु हिंसा र दुर्व्यवहार परामर्श (१२ हप्ता)</h2>
+                <ul>
+                    <li>सुरक्षा मूल्यांकन र योजना
+                        <ul>
+                            <li>जोखिम मूल्यांकन प्रोटोकल</li>
+                            <li>आपतकालीन प्रतिक्रिया प्रक्रियाहरू</li>
+                            <li>सुरक्षित घर समन्वय</li>
+                            <li>कानूनी प्रयोजनका लागि कागजात</li>
+                        </ul>
+                    </li>
+                    <li>आघात-सूचित हेरचाह
+                        <ul>
+                            <li>जटिल आघात उपचार</li>
+                            <li>दुर्व्यवहार गतिशीलतामा सांस्कृतिक कारकहरू</li>
+                            <li>लैंगिक-आधारित हिंसा ढाँचाहरू</li>
+                            <li>पुस्तान्तरित आघात निको पार्ने</li>
+                        </ul>
+                    </li>
+                    <li>सामुदायिक स्रोतहरू
+                        <ul>
+                            <li>स्थानीय सहयोग नेटवर्क</li>
+                            <li>कानूनी वकालत सेवाहरू</li>
+                            <li>आर्थिक सशक्तिकरण कार्यक्रमहरू</li>
+                            <li>बाल सहयोग सेवाहरू</li>
+                        </ul>
+                    </li>
+                    <li>निको पार्ने अभ्यासहरू
+                        <ul>
+                            <li>परम्परागत उपचार संस्कारहरू</li>
+                            <li>समूह सहयोग सहजीकरण</li>
+                            <li>परिवार प्रणाली हस्तक्षेप</li>
+                            <li>सशक्तिकरण प्रविधिहरू</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         <div class="grid-container">
             <div class="english">
                 <h2>Certification Requirements</h2>
                 <ul>
-                    <li>Completion of all required modules (84 weeks total)</li>
-                    <li>500 hours classroom instruction</li>
-                    <li>200 hours clinical practice</li>
-                    <li>100 hours supervised clinical internship</li>
-                    <li>50 hours case study documentation</li>
-                    <li>30 hours research project</li>
-                    <li>20 hours community service</li>
+                    <li>Completion of all required modules (108 weeks total)</li>
+                    <li>600 hours classroom instruction</li>
+                    <li>300 hours clinical practice</li>
+                    <li>150 hours supervised clinical internship</li>
+                    <li>75 hours case study documentation</li>
+                    <li>50 hours research project</li>
+                    <li>40 hours community service</li>
+                    <li>30 hours domestic violence support services</li>
+                    <li>20 hours doula apprenticeship</li>
                     <li>Final written and practical examinations</li>
                     <li>Research project presentation</li>
                     <li>Professional portfolio submission</li>
+                    <li>Emergency response certification</li>
                 </ul>
             </div>
             <div class="nepali">
                 <h2>प्रमाणीकरण आवश्यकताहरू</h2>
                 <ul>
-                    <li>सबै आवश्यक मोड्युलहरू पूरा (कुल ८४ हप्ता)</li>
-                    <li>५०० घण्टा कक्षाकोठा निर्देशन</li>
-                    <li>२०० घण्टा क्लिनिकल अभ्यास</li>
-                    <li>१०० घण्टा पर्यवेक्षित क्लिनिकल इन्टर्नशिप</li>
-                    <li>५० घण्टा केस अध्ययन कागजात</li>
-                    <li>३० घण्टा अनुसन्धान परियोजना</li>
-                    <li>२० घण्टा सामुदायिक सेवा</li>
+                    <li>सबै आवश्यक मोड्युलहरू पूरा (कुल १०८ हप्ता)</li>
+                    <li>६०० घण्टा कक्षाकोठा निर्देशन</li>
+                    <li>३०० घण्टा क्लिनिकल अभ्यास</li>
+                    <li>१५० घण्टा पर्यवेक्षित क्लिनिकल इन्टर्नशिप</li>
+                    <li>७५ घण्टा केस अध्ययन कागजात</li>
+                    <li>५० घण्टा अनुसन्धान परियोजना</li>
+                    <li>४० घण्टा सामुदायिक सेवा</li>
+                    <li>३० घण्टा घरेलु हिंसा सहयोग सेवाहरू</li>
+                    <li>२० घण्टा डुला प्रशिक्षार्थी</li>
                     <li>अन्तिम लिखित र व्यावहारिक परीक्षाहरू</li>
                     <li>अनुसन्धान परियोजना प्रस्तुति</li>
                     <li>व्यावसायिक पोर्टफोलियो पेश</li>
+                    <li>आपतकालीन प्रतिक्रिया प्रमाणीकरण</li>
                 </ul>
             </div>
         </div>
-    </div>
 </body>
 </html>
