--- a/HTML/content/tech/google_apis_demo.html
+++ b/HTML/content/tech/google_apis_demo.html
@@ -147,7 +147,7 @@
             <div id="translation-results" class="result"></div>
         </div>
     </div>
-
+    <div><a href="https://github.com/ddtraveller/nepal-web/blob/main/HTML/content/tech/google_apis.md">github explanation</a></div>
     <script>
         let apiKey = null;
         const canvas = document.getElementById('imageCanvas');
