--- a/HTML/content/tech/where_am_i.html
+++ b/HTML/content/tech/where_am_i.html
@@ -118,7 +118,7 @@
 
     <div id="map"></div>
     <div id="markerList"></div>
-
+    <div>Click map to add marker or use lat/long. मार्कर थप्न नक्सामा क्लिक गर्नुहोस् वा अक्षांश/लामो प्रयोग गर्नुहोस्।</div>
     <script>
         let map;
         let markers = [];
