handful of content pages

--- a/HTML/content/permaculture/aquaponics.html
+++ b/HTML/content/permaculture/aquaponics.html
@@ -57,7 +57,7 @@
             <h1>Aquaponics: A Sustainable Food Production System</h1>
             <h1 class="nepali">एक्वापोनिक्स: दिगो खाद्य उत्पादन प्रणाली</h1>
             
-            <img src="https://nepal-web.net/imgs/aquaponics.png" alt="Aquaponics System Diagram" />
+            <img src="https://nepal-web.net/images/aquaponics.jpg" alt="Aquaponics System Diagram" />
             <div class="dual-caption">
                 <div>Diagram showing the basic components of an aquaponics system</div>
                 <div>एक्वापोनिक्स प्रणालीका आधारभूत घटकहरू देखाउने चित्र</div>
@@ -79,7 +79,7 @@
                 <p>एक्वापोनिक्स प्रणालीमा, माछाहरूलाई ट्याङ्कीमा पालिन्छ जहाँ तिनीहरूले पोषक तत्वयुक्त फोहोर उत्पादन गर्छन्। यो पानीलाई फिल्टरेशन प्रणाली मार्फत पम्प गरिन्छ जहाँ लाभदायक ब्याक्टेरियाहरूले माछाको फोहोरबाट अमोनियालाई नाइट्राइट र त्यसपछि नाइट्रेटमा परिवर्तन गर्छन्। यी नाइट्रेटहरू हाइड्रोपोनिक ग्रो बेडमा बढ्ने बिरुवाहरूका लागि प्राकृतिक मलको रूपमा काम गर्छन्। बिरुवाहरूले यी पोषक तत्वहरू सोस्दा पानी सफा हुन्छ, जुन फेरि माछा ट्याङ्कीमा फर्काइन्छ, यसरी चक्र पूरा हुन्छ।</p>
             </div>
         </div>
-
+    <img src="https://nepal-web.net/images/aquaponics2.jpg" alt="Aquaponics alt System Diagram" />
         <div class="section">
             <h2>Key Components</h2>
             <p>A typical aquaponics system consists of several essential components: fish tanks for aquaculture, mechanical filtration to remove solid waste, biofilters containing beneficial bacteria, hydroponic grow beds, and a water pump system. The size and complexity of these components can vary from small home systems to large commercial operations.</p>
@@ -110,5 +110,6 @@
             </div>
         </div>
     </div>
+    <a href="https://nepal-web.s3.us-west-2.amazonaws.com/pdf/Aquaponics_Cheat_Sheet.pdf">Cheat Sheet</a>
 </body>
 </html>
