content files for 2/7

--- a/HTML/content/healing/healer_certification.html
+++ b/HTML/content/healing/healer_certification.html
@@ -619,6 +619,7 @@
                 <h2>7. Psychological Trauma Healing (12 weeks)</h2>
                 <ul>
                     <li>Understanding trauma physiology and neurobiology</li>
+                    <li>Myofascial Release</li>
                     <li>EMDR (Eye Movement Desensitization and Reprocessing)</li>
                     <li>Recapitulation techniques</li>
                     <li>Creating therapeutic safe space</li>
@@ -635,6 +636,7 @@
             <div class="nepali">
                 <h2>७. मनोवैज्ञानिक आघात उपचार (१२ हप्ता)</h2>
                 <ul>
+                    <li>मायोफेसियल रिलिज</li>
                     <li>आघात शरीरक्रिया र न्युरोबायोलोजी बुझ्ने</li>
                     <li>ईएमडीआर (आँखा चलाउने असंवेदनीकरण र पुनःप्रक्रिया)</li>
                     <li>पुनःस्मरण प्रविधिहरू</li>
