--- a/HTML/content/dharma_studies/tong_len.html
+++ b/HTML/content/dharma_studies/tong_len.html
@@ -181,7 +181,7 @@
                 <h2>टोङ्लेन ध्यानको परिचय</h2>
                 <p>टोङ्लेन ध्यान तिब्बती बौद्ध परम्पराबाट उत्पन्न एक गहिरो र परिवर्तनकारी अभ्यास हो। "टोङ्लेन" शब्दको तिब्बती भाषामा "दिने र लिने" वा "पठाउने र प्राप्त गर्ने" अर्थ हुन्छ। यसको मूल उद्देश्य हाम्रो सामान्य आत्म-सुरक्षात्मक प्रवृत्तिलाई चुनौती दिँदै अरूको पीडामा हाम्रो हृदयलाई खोल्नु हो।</p>
                 
-                <p>धेरैजसो ध्यान अभ्यासहरू व्यक्तिगत शान्ति र विश्राμμा केन्द्रित हुन्छन्, तर टोङ्लेन एक क्रान्तिकारी सहानुभूति र करुणाको अभ्यास हो। यसले अभ्यासकर्तालाई अरूको पीडा र कष्टलाई श्वास द्वारा भित्र लिन, आफ्नो भित्री अनुभवमा परिवर्तन गर्न र त्यसपछि निको हुने, सान्त्वना र राहतको श्वास बाहिर पठाउन सिकाउँछ।</p>
+                <p>धेरैजसो ध्यान अभ्यासहरू व्यक्तिगत शान्ति र विश्राममा केन्द्रित हुन्छन्, तर टोङ्लेन एक क्रान्तिकारी सहानुभूति र करुणाको अभ्यास हो। यसले अभ्यासकर्तालाई अरूको पीडा र कष्टलाई श्वास द्वारा भित्र लिन, आफ्नो भित्री अनुभवमा परिवर्तन गर्न र त्यसपछि निको हुने, सान्त्वना र राहतको श्वास बाहिर पठाउन सिकाउँछ।</p>
             </div>
 
             <div class="section">
@@ -207,7 +207,7 @@
             </div>
 
             <div class="section">
-                <h2>टोङ्लेन अभ्यासका चरणहरू</h2>
+                <h2>चरणबद्ध टोङ्लेन अभ्यास</h2>
                 <h3>तयारी</h3>
                 <ol>
                     <li>एक शान्त र सहज ठाउँ भेट्टाउनुहोस् जहाँ तपाईंलाई कसैले बाधा दिने छैन।</li>
